Prevented overflow off bottom

--- a/css/style-bhbubble.css
+++ b/css/style-bhbubble.css
@@ -28,7 +28,7 @@ a{
 }
 #bubble-container{
     width:100%;
-    height:100%;
+    height:90%;
     position:absolute;
 }
 #footer{
